<resources>
    <string name="app_name">Alta Pressao GNV PRO</string>
    <string name="textoEntrada">Faça seu login.</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Criar nova conta!</string>
    <string name="btnEsqueciSenha">Esqueci minha senha!</string>
    <string name="CampoDigiteEmail">E-mail</string>
    <string name="CampoDigiteSenha">Senha</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="default_web_client_id">637598423111-jmohjf9hbcjj6rial4v5t7ij97h6vkge.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Postos</string>
    <string name="menu_calculadora">Calculadora de Combustivel</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>