<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_calculate_24"
            android:title="@string/menu_calculadora" />

        <item
            android:id="@+id/nav_contato"
            android:icon="@drawable/ic_email_24"
            android:title="@string/menu_contato" />


        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/menu_sair" />
    </group>
</menu>