<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_fundo"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textoEntrada"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CampoDigiteEmail"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CampoDigiteSenha"
            android:inputType="textPassword"
            android:textColor="@color/branco"
            tools:text="senhateste" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/verdeBotoes"
        android:drawableLeft="@drawable/ic_registration_24"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/btnCadastrar"
        android:text="Criar nova conta"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btnEntrarComGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnEntrarComGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrarComGoogle" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/azulBotoes"
        android:drawableLeft="@drawable/baseline_navigate_next_24"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/btnCadastrar"
        android:text="Entrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEsqueciSenha" />

    <Button
        android:id="@+id/btnEntrarComGoogle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4285F4"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/btnCadastrar"
        android:text="Entrar com Google"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btnEntrar"
        app:layout_constraintStart_toStartOf="@+id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <Button
        android:id="@+id/btnEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/btnEsqueciSenha"
        android:text="Esqueci minha senha!"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>
